--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@types/base-64": "^1.0.2",
     "axios": "^1.8.0",
     "base-64": "^1.0.0",
-    "next": "15.1.7",
+    "next": "^14.1.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
